removed overflow-x hidden to stop scrolling issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 .header {
